add info about the number of the open issues, the number of the pull req and the build status of travis

--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script id="repo-info-short" type="text/template">
-      <li><a href="http://github.com/jsk-ros-pkg/<%- name %>"><%= name %></a></li>
+      <li class="list-group-item">
+        <h3><a target="_blank" href="http://github.com/<%- org_name %>/<%- name %>"><%= name %></a>
+        <a target="_blank" href="http://travis-ci.org/<%- org_name %>/<%- name %>">
+          <img src="http://travis-ci.org/<%- org_name %>/<%- name %>.png"></img>
+        </a>
+        </h3>
+        <% if (issue_num > 0) { %>
+        <a target="_blank" href="http://github.com/<%- org_name %>/<%- name %>/issues">
+          <span class="label label-info"><%= issue_num %> issues</span>
+        </a>
+        <% } %>
+        <% if (pr_num > 0) { %>
+        <a target="_blank" href="http://github.com/<%- org_name %>/<%- name %>/pulls">
+          <span class="label label-success"><%= pr_num %> PRs</span>
+        </a>
+        <% } %>
+      </li>
     </script>
   </head>
   <body>
@@ -17,8 +33,18 @@
         <h1>jsk-ros-pkg.github.io</h1>
       </div>
     </div>
-    <div class="container">
-      <ul id="repository-list">
+    <div class="container" id="jsk-ros-pkg-info">
+      <ul class="list-group">
+        <li class="list-group-item-info list-group-item">
+          <h2><a href="http://github.com/jsk-ros-pkg">jsk-ros-pkg</a></h2>
+        </li>
+      </ul>
+    </div>
+    <div class="container" id="start-jsk-info">
+      <ul class="list-group">
+        <li class="list-group-item-info list-group-item">
+          <h2><a href="http://github.com/start-jsk">start-jsk</a></h2>
+        </li>
       </ul>
     </div>
   </body>
