add euslisp organization

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
         </li>
       </ul>
     </div>
+    <div class="container" id="euslisp-info">
+      <ul class="list-group">
+        <li class="list-group-item-info list-group-item">
+          <h2><a href="http://github.com/euslisp">euslisp</a></h2>
+        </li>
+      </ul>
+    </div>
     <div class="container" id="start-jsk-info">
       <ul class="list-group">
         <li class="list-group-item-info list-group-item">
